# AIs

./: .gitignore  .gitmessage  CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json
Alpha/: .mcp.json  settings.json
Alpha/.claude-plugin/: plugin.json
Alpha/agents/: Alpha.md
Alpha/hooks/: hooks.json
Alpha/mechanism/: .gitignore  .pre-commit-config.yaml  DEV.md  alembic.ini  compose.yaml  justfile  pyproject.toml
Alpha/mechanism/alembic/: baseline-schema.sql  env.py  script.py.mako
Alpha/mechanism/alembic/versions/: 2026_05_15_1454_baseline.py
Alpha/mechanism/src/mechanism/: __init__.py  diary.py  settings.py
Alpha/mechanism/src/mechanism/cortex_server/: __init__.py  diary.py  get.py  instructions.md  models.py  recent.py  search.py  server.py  store.py
Alpha/mechanism/src/mechanism/db/: sync.py
Alpha/mechanism/src/mechanism/entry/: __init__.py  doctor.py  session_start.py  stop.py  user_prompt_submit.py
Alpha/mechanism/src/mechanism/scripts/: copy_from_prod.py
Alpha/scripts/: bootstrap.sh  session_start.py  stop.py  user_prompt_submit.py
